# pacman_package_sorter

./: Cargo.toml
src/: backend.rs  config.rs  db.rs  error.rs  main.rs  main_cli.rs  models.rs  tui.rs
src/tui/: app.rs  event.rs  mod.rs  terminal.rs  ui.rs
src/tui/app_states/: action_modal_state.rs  app_state.rs  filter_modal_state.rs  message_log.rs  mod.rs  normal_state.rs  search_state.rs  show_mode_state.rs  sort_state.rs  state.rs  tag_modal_state.rs
