[package]
name = "pacman_package_sorter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
prettytable-rs = "0.10.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
